Support third party types in schema derivation

--- a/rust/parquet_derive_test/Cargo.toml
+++ b/rust/parquet_derive_test/Cargo.toml
@@ -24,3 +24,5 @@ edition = "2018"
 [dependencies]
 parquet = {path = "../parquet"}
 parquet_derive = {path = "../parquet_derive"}
+chrono = "0"
+uuid = "0"
