--- a/rust/arrow/Cargo.toml
+++ b/rust/arrow/Cargo.toml
@@ -45,7 +45,7 @@ csv = "1.0"
 num = "0.2"
 regex = "1.1"
 lazy_static = "1.2"
-packed_simd = { version = "0.3.4", package = "packed_simd_2" }
+packed_simd = { version = "0.3.4", package = "packed_simd_2", optional=true }
 chrono = "0.4"
 flatbuffers = "0.6.0"
 hex = "0.4"
